<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/resolution_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/width_input"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_times" />

            <EditText
                android:id="@+id/height_input"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_setting_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/hostname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_settings_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_settings_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_setting_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/port_input"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/port_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/port_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port_80_with_explanation" />

                <RadioButton
                    android:id="@+id/port_8080"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port_8080_with_explanation" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command_setting_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/command_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/command_radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/command_streaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_streaming_with_explanation" />

            <RadioButton
                android:id="@+id/command_videofeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_videofeed_with_explanation" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cStayAwake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StayAwake" />

        <Button
            android:id="@+id/settings_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_done" />
    </LinearLayout>

</ScrollView>